# ros-msgs

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  ros-node-request.md
fszhaw_msgs/: package.xml
fszhaw_msgs/msg/: CurrentPosition.msg
msg/: Cone.msg  PlannedTrajectory.msg  Track.msg
