<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fszhaw_msgs</name>
  <version>0.1.0</version>
  <description>
	Common Formula Student ZHAW ROS messages
  </description>
  <maintainer email="vicengui@students.zhaw.ch">vicengui</maintainer>
  <maintainer email="kambeali@students.zhaw.ch">kambeali</maintainer>
  <license>Apache-License-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
